--- a/code/dev/parts/domains/origin-request-headers/origin-request-headers.tpl.html
+++ b/code/dev/parts/domains/origin-request-headers/origin-request-headers.tpl.html
@@ -15,11 +15,11 @@
           <th>Header Name</th>
           <th>Header Value</th>
           <th class="table-title--operation">Operation</th>
-          <th> </th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
-        <tr ng-animate-disabled  ng-repeat="line in $ctrl.origin_request_headers" ng-form="editRow">
+        <tr ng-animate-disabled ng-repeat="line in $ctrl.origin_request_headers" ng-form="editRow">
           <td ng-animate-disabled ng-click="editRow.isSelectedIndex = $index" ng-class="{'has-error': editRow.headerName.$invalid}">
             <span ng-animate-disabled ng-show="editRow.isSelectedIndex!==$index">{{line.header_name}} </span>
             <input type="text" ng-animate-disabled validate-caching-rule-header-name name="headerName" class="form-control" ng-model="line.header_name" placeholder="New Header Name" ng-show="editRow.isSelectedIndex==$index" required>
@@ -28,57 +28,29 @@
             </div>
           </td>
           <td ng-animate-disabled ng-click="editRow.isSelectedIndex = $index" ng-class="{'has-error': editRow.headerValue.$invalid}">
-            <span ng-animate-disabled  ng-show="editRow.isSelectedIndex!==$index">{{line.header_value}} </span>
+            <span ng-animate-disabled ng-show="editRow.isSelectedIndex!==$index">{{line.header_value}} </span>
             <input ng-animate-disabled validate-caching-rule-header-value type="text" name="headerValue" class="form-control" ng-model="line.header_value" placeholder="New Header Value" ng-show="editRow.isSelectedIndex==$index" required>
             <div class="error-messages" ng-messages="editRow.headerValue.$error" role="alert" ng-messages-multiple="false">
               <div ng-messages-include="parts/shared/error-messages.html"></div>
             </div>
           </td>
           <td ng-click="editRow.isSelectedIndex = $index">
-            <span ng-animate-disabled  ng-show="editRow.isSelectedIndex!==$index" >{{line.operation}}</span>
-            <select ng-animate-disabled ng-if="editRow.isSelectedIndex==$index" class="form-control" ng-model="line.operation">
-              <option value="add">Add</option>
-              <option value="replace">Replace</option>
-              <option value="remove">Remove</option>
+            <span ng-animate-disabled ng-show="editRow.isSelectedIndex!==$index">{{$ctrl.headerOperations[line.operation]}}</span>
+            <select ng-animate-disabled ng-if="editRow.isSelectedIndex==$index" class="form-control" ng-model="line.operation" ng-options="key as label for (key,label) in $ctrl.headerOperations">
             </select>
           </td>
           <td>
-            <button class="btn btn-primary btn-xs btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex=$index" title="Edit Header" ng-if="editRow.isSelectedIndex!==$index">
-              <i class="glyphicon glyphicon-remove"> Edit</i>
+            <button class="btn btn-primary btn-sm btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex=$index" title="Edit Header" ng-if="editRow.isSelectedIndex!==$index">
+              <i class="glyphicon glyphicon-remove"> Edit </i>
             </button>
-            <button class="btn btn-success btn-xs btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex =null" title="Save Header" ng-if="editRow.isSelectedIndex==$index" ng-disabled="editRow.$invalid">
-              <i class="glyphicon glyphicon-ok"> Ok</i>
+            <button class="btn btn-success btn-sm btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex =null" title="Save Header" ng-if="editRow.isSelectedIndex==$index" ng-disabled="editRow.$invalid">
+              <i class="glyphicon glyphicon-ok">  Ok  </i>
             </button>
-            <button class="btn btn-warning btn-xs btn-delete-origin_request_header" type="button" ng-click="$ctrl.onDelete($index)" title="Delete Header">
+            <button class="btn btn-warning btn-sm btn-delete-origin_request_header" type="button" ng-click="$ctrl.onDelete($index)" title="Delete Header">
               <i class="glyphicon glyphicon-remove"> Delete</i>
             </button>
           </td>
         </tr>
-        <!-- New line-->
-        <!--       <tr ng-form="newLineForm" class="well">
-          <td ng-class="{'has-error': newLineForm.headerName.$invalid && newLineForm.headerName.$dirty }">
-            <input type="text" validate-caching-rule-header-name name="headerName" class="form-control" ng-model="$ctrl.newOriginRequestHeader.header_name" placeholder="New Header Name" required>
-            <div class="error-messages" ng-messages="newLineForm.headerName.$error" role="alert" ng-messages-multiple="false">
-              <div ng-messages-include="parts/shared/error-messages.html"></div>
-            </div>
-          </td>
-          <td ng-class="{ 'has-error': newLineForm.headerValue.$invalid && newLineForm.headerValue.$dirty }">
-            <input validate-caching-rule-header-value type="text" name="headerValue" class="form-control" ng-model="$ctrl.newOriginRequestHeader.header_value" placeholder="New Header Value" required>
-            <div class="error-messages" ng-messages="newLineForm.headerValue.$error" role="alert" ng-messages-multiple="false">
-              <div ng-messages-include="parts/shared/error-messages.html"></div>
-            </div>
-          </td>
-          <td>
-            <select class="form-control" ng-model="$ctrl.newOriginRequestHeader.operation">
-              <option value="add">Add</option>
-              <option value="replace">Replace</option>
-              <option value="remove">Remove</option>
-            </select>
-          </td>
-          <td>
-            <button type="button" class="btn btn-success" ng-disabled="!newLineForm.$valid" ng-click="$ctrl.onAddNew($ctrl.newOriginRequestHeader)" title="Add New Header"><i class="glyphicon glyphicon-plus"></i> Add New</button>
-          </td>
-        </tr> -->
       </tbody>
     </table>
   </div>
