--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -29,10 +29,13 @@
       </toggle-switch>
     </div>
   </div>
-  <div class="form-group form-inline">
+  <div class="form-group form-inline" ng-class="{'has-error': editForm.newTTL.$invalid && editForm.newTTL.$dirty}">
     <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines how long a cached objected will be consider frash (range 0-10,000,000)">Edge Cache TTL</label>
     <div class="col-md-9">
-      <input type="number" class="form-control" min="0" max="10000000" ng-model="$ctrl.rule.edge_caching.new_ttl" required> second(s)
+      <input type="number" class="form-control" name="newTTL" ng-model="$ctrl.rule.edge_caching.new_ttl" min="0" max="10000000" ng-min="0" ng-max="10000000" required> second(s)
+      <div class="error-messages" ng-messages="editForm.newTTL.$error" role="alert" ng-messages-multiple>
+        <div ng-messages-include="parts/shared/error-messages.html"></div>
+      </div>
     </div>
   </div>
   <div class="form-group form-inline">
@@ -138,10 +141,13 @@
       </toggle-switch>
     </div>
   </div>
-  <div class="form-group form-inline" ng-show="$ctrl.rule.browser_caching.override_edge">
+  <div class="form-group form-inline"  ng-class="{'has-error': editForm.browserCachingNewTTL.$invalid && editForm.browserCachingNewTTL.$dirty}" ng-show="$ctrl.rule.browser_caching.override_edge">
     <label class="col-sm-3 control-label">Browser Caching TTL, seconds</label>
     <div class="col-md-9">
-      <input type="number" class="form-control" min="0" max="3600" ng-model="$ctrl.rule.browser_caching.new_ttl">
+      <input type="number" class="form-control"name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl"  min="0" max="3600" ng-min="0" ng-max="3600" required>
+      <div class="error-messages" ng-messages="editForm.browserCachingNewTTL.$error" role="alert" ng-messages-multiple>
+        <div ng-messages-include="parts/shared/error-messages.html"></div>
+      </div>
     </div>
   </div>
   <div class="form-group form-inline">
