added 'dnd' effect for reordering protocol checkboxes elements at options page for app

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -122,6 +122,8 @@
 <script type="text/javascript" src="../bower_components/AngularJS-Toaster/toaster.min.js"></script>
 <script type="text/javascript" src="../bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
+<script type="text/javascript" src="../bower_components/angular-dragdrop/src/angular-dragdrop.min.js"></script>
+<script type="text/javascript" src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
