--- a/code/dev/parts/domains/domain-select/domain-select.html
+++ b/code/dev/parts/domains/domain-select/domain-select.html
@@ -1,5 +1,5 @@
 <ui-select ng-model="ngDomain"
-           theme="select2"
+           theme="select2" ng-animate-disabled
            ng-disabled="_loading"
            on-select="onModelSelect($model)"
            style="min-width: 300px;" >
