--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -17,7 +17,7 @@
                   <div class="form-group">
 
                     <ui-select ng-model="selected.val"
-                               theme="select2"
+                               theme="select2" ng-animate-disabled
                                ng-disabled="_loading"
                                on-select="onAccountSelect($model)"
                                style="min-width: 300px;" >
