--- a/code/dev/parts/apps/app-select.html
+++ b/code/dev/parts/apps/app-select.html
@@ -1,6 +1,6 @@
 <ui-select ng-model="ngModel"
            class="app-select"
-           theme="select2"
+           theme="select2"  ng-animate-disabled
            ng-disabled="_loading"
            on-select="onAppSelect($model)">
   <ui-select-match placeholder="Select Application">{{$select.selected.app_name}}</ui-select-match>
