--- a/code/dev/parts/keys/dialog/create.html
+++ b/code/dev/parts/keys/dialog/create.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
 
   <ui-select ng-model="selected"
-             theme="select2"
+             theme="select2" ng-animate-disabled
              on-select="onModelSelect($model)"
              style="min-width: 300px;" >
     <ui-select-match placeholder="Select account">{{$select.selected.companyName}}</ui-select-match>
