--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -65,7 +65,7 @@
             <label for="account_id"
                    class="col-sm-2 control-label">Account</label>
             <div class="col-sm-4">
-               <ui-select ng-model="key.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
+               <ui-select ng-model="key.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
