--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -33,8 +33,7 @@
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{ 'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty }">
             <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select account name the job should be associated with">Account *</label>
             <div class="col-sm-10">
-              <input type="hidden" ng-model="model.account_id" name="accountId" required></input>
-              <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" name="account_id" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
+              <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" name="accountId" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
@@ -74,14 +73,14 @@
               <span ng-show="model.source_type=='app'">Application</span> *
             </label>
             <div class="col-sm-10">
-              <ui-select ng-model="selectedDomainSourceId" theme="select2" name="sourceId" ng-disabled="_loading" on-select="onDomainSelect($model)" style="min-width: 550px;" ng-if="model.source_type=='domain'" required>
+              <ui-select ng-model="selectedDomainSourceId" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onDomainSelect($model)" style="min-width: 550px;" ng-if="model.source_type=='domain'" required>
                 <ui-select-match placeholder="Select Domain">{{$select.selected.domain_name}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in domainsList | filter: {domain_name: $select.search,account_id:model.account_id}">
                   <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
               <!-- TODO: make select of Mobile Apps-->
-              <ui-select ng-model="selectedAppSourceId" class="source-select" theme="select2" name="sourceId" ng-disabled="_loading" on-select="onAppSelect($model)" style="min-width: 550px;" ng-if="(model.source_type=='app')" required>
+              <ui-select ng-model="selectedAppSourceId" class="source-select" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onAppSelect($model)" style="min-width: 550px;" ng-if="(model.source_type=='app')" required>
                 <ui-select-match placeholder="Select Application">{{$select.selected.app_name}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in appsList | filter: {app_name: $select.search,account_id:model.account_id }">
                   <div ng-bind-html="item.app_name|highlight: $select.search"></div>
@@ -139,7 +138,7 @@
               <div class="form-group" ng-class="{ 'has-error': editForm.destinationUsername.$invalid && editForm.destinationUsername.$dirty }">
                 <label for="destinationUsername" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Username">Username</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-maxlength="150" 
+                  <input type="text" class="form-control" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-maxlength="150"
                     ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                   <div class="error-messages" ng-messages="editForm.destinationUsername.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
