Overlay removed from loading panel

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -40,7 +40,7 @@
   <![endif]-->
   <script src="zendesk.js"></script>
 </head>
-<body dw-loading="loading" data-ng-app="revapm.Portal">
+<body dw-loading="loading"   dw-loading-options="{active: true, text: false, overlay: false}" data-ng-app="revapm.Portal">
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
 <div ui-view="layout" class="layout"></div>
 
