Polishing the pervious PR

--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -18,6 +18,7 @@
                      ng-disabled="_loading"
                      ng-model="email"
                      autofocus
+                     ng-maxlength="64"
                      required
                      >
               <div class="error-messages" ng-messages="loginForm.email.$error" role="alert" ng-messages-multiple>
