--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -142,9 +142,9 @@
     </div>
   </div>
   <div class="form-group form-inline"  ng-class="{'has-error': editForm.browserCachingNewTTL.$invalid && editForm.browserCachingNewTTL.$dirty}" ng-show="$ctrl.rule.browser_caching.override_edge">
-    <label class="col-sm-3 control-label">Browser Caching TTL, seconds</label>
+    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines for now long objects will be cached in browser cache (range 0-10,000,000 seconds)">Browser Caching TTL, seconds</label>
     <div class="col-md-9">
-      <input type="number" class="form-control"name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl"  min="0" max="3600" ng-min="0" ng-max="3600" required>
+      <input type="number" class="form-control"name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl" ng-min="0" ng-max="10000000" required>
       <div class="error-messages" ng-messages="editForm.browserCachingNewTTL.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
