--- a/code/dev/parts/domains/modals/confirmDeleteHeaderInfo.tpl.html
+++ b/code/dev/parts/domains/modals/confirmDeleteHeaderInfo.tpl.html
@@ -2,7 +2,7 @@
   <h3 class="modal-title">Confirm</h3>
 </div>
 <div class="modal-body">
-  Are you sure you want to delete <strong>'{{model.header_name}}':'{{model.header_value}}'</strong>?
+  Are you sure you want to delete header <strong>'{{model.header_name}}':'{{model.header_value}}'</strong>?
 
 </div>
 <div class="modal-footer">
